--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -8,11 +8,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:gravity="center">
         <ImageView
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:src="@drawable/app_icon"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이두박근"
+            android:textSize="30dp"
+            android:fontFamily="@font/notosans_bold"/>
 
 
 
