--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,17 +20,40 @@
 
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="400dp"
+        android:gravity="center">
+
 
     <ImageButton
         android:id="@+id/kakao_login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="145dp"
+        android:layout_marginBottom="20dp"
         android:background="@android:color/transparent"
         android:src="@drawable/kakao_login_medium_narrow"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+         />
+
+
+
+        <Button
+            android:id="@+id/btn1"
+            android:layout_width="180dp"
+            android:layout_below="@+id/kakao_login_button"
+            android:layout_height="50dp"
+            android:fontFamily="@font/notosans_bold"
+            android:background="@drawable/button"
+            android:text="비회원으로 이용하기"/>
+
+
+
+
+
+    </RelativeLayout>
+
+
 
 
 
