--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -31,9 +31,9 @@
         android:id="@+id/btnWrite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:enabled="false"
+
         android:background="@drawable/button"
-        android:text="저장"
+        android:text="일정변경"
         android:textColor="@color/black"
 
 
